# aidf-2

./: .gitignore  CMakeLists.txt  README.txt
include/: deal.hpp  escrowtest.hpp
ricardian/: escrowtest.contracts.md
src/: CMakeLists.txt  escrowtest.cpp
